--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,14 @@
 	</properties>
 	<dependencies>
 	
+		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+			<dependency>
+			    <groupId>commons-fileupload</groupId>
+			    <artifactId>commons-fileupload</artifactId>
+			    <version>1.4</version>
+			</dependency>
+		
+	
 		<!-- Mybatis API 다운 -->
 		
 			<!-- mybatis -->
