--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,15 @@
 	</properties>
 	<dependencies>
 	
+	
+		<!-- 'multipartResolver'오류잡기용 -->
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.4</version>
+		</dependency>
+	
+	
 		<!-- Mybatis API 다운 -->
 		
 			<!-- mybatis -->
